# terra-net

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
configs/: base.yaml
configs/data/: asu.yaml  deepmimo.yaml  lwm.yaml  ofcom.yaml  radiomapseer.yaml  sionna.yaml  sionna_cities.yaml  sionna_gen.yaml
configs/experiment/: baselines_loco.yaml  robustness.yaml  terranet_loco.yaml
configs/model/: descriptor_baseline.yaml  terranet.yaml
docker/: Dockerfile
docs/: DATA_LICENSES.md  EXPERIMENTS.md
outputs/tables/: baselines_loco.csv  kshot_gbdt.csv  kshot_loco.csv  label_noise.csv  neural_loco.csv  scene_provenance.csv
scripts/: 00_download_data.sh  01_build_scenes.py  01_generate_sionna.py  01b_raytrace.py  02_extract_descriptors.py  02b_fill_descriptors.py  03_make_splits.py  04_fit_baselines.py  05_kshot.py  05_train.py  06_evaluate.py  06_train_neural.py  07_label_noise.py  07_make_tables.py  setup_env.sh
src/terranet/: __init__.py  cli.py
src/terranet/data/: datasets.py  splits.py  tiling.py
src/terranet/data/descriptors/: __init__.py  built_env.py  climate.py  (+2 more)
src/terranet/evaluation/: calibration.py  metrics.py  statistics.py
src/terranet/models/: hypernet.py
src/terranet/training/: losses.py  maml.py  trainer.py
src/terranet/utils/: __init__.py  geo.py  io.py  logging.py  seed.py
tests/: test_bs_placement.py  test_conformal.py  test_descriptor_transfer.py  test_geo.py  test_geo_frame.py  test_log_distance.py  test_metrics.py  test_placement.py  test_statistics.py  test_tiling.py
(+26 files in other folders)
