[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terranet"
version = "0.1.0"
description = "TERRA-Net: transferable, explainable path-loss parameter learning for 6G digital twins"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.1",
  "torch>=2.2",
  "torch-geometric>=2.5",
  "lightning>=2.2",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "scikit-learn>=1.4",
  "gpytorch>=1.11",
  "shap>=0.45",
  "rasterio>=1.3",
  "geopandas>=0.14",
  "shapely>=2.0",
  "pyproj>=3.6",
  "osmnx>=1.9",
  "xarray>=2024.1",
  "cdsapi>=0.7",
  "h5py>=3.10",
  "zarr>=2.16",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "tqdm>=4.66",
  "wandb>=0.16",
  "rich>=13.7",
  "typer>=0.9",
]

[project.optional-dependencies]
rt = ["sionna==0.19.*", "tensorflow>=2.15", "mitsuba>=3.5"]  # pin Sionna: diffraction removed in later versions
dev = ["pytest>=8.0", "pytest-cov", "ruff>=0.4", "mypy>=1.9", "pre-commit>=3.6"]

[project.scripts]
terranet = "terranet.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E", "F", "I", "W", "B", "UP"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
